--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,14 @@
 org.gradle.jvmargs=-Xmx512M
+
+# ===================================
+#  Подпись jar файла
+# ===================================
+
+#signing.keyStorePath=""
+#signing.secretKeyRingFile=""
+
+#signing.alias=""
+#signing.keyStorePassword=""
+#signing.preserveLastModified=""
+#signing.timestampAuthority=""
+#signing.digestAlgorithm=""
